test/parser/valid/types/short.java
protected class A {
  public A() {}
  protected short x;
}

