test/parser/bad/_custom/interface_constructor.java
protected interface InterfaceConstructor {
    public InterfaceConstructor() {}
}
